<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:id="@+id/activity_fingerprint_main"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:background="@color/white"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin">

    <ImageView
            android:layout_gravity="center"
            android:id="@+id/fingerprint_guide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@mipmap/icon_fingerprint_normal"
            android:contentDescription="TODO"
            tools:ignore="ContentDescription"/>

    <TextView
            android:id="@+id/fingerprint_guide_tip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/fingerprint_recognition_guide_tip"
            android:textSize="18sp"
            android:textColor="@color/colorAccent"
            />

    <Button
            android:id="@+id/fingerprint_recognition_start"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/fingerprint_recognition_start"/>

    <Button
            android:id="@+id/fingerprint_recognition_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/fingerprint_recognition_cancel"/>

    <Button
            android:id="@+id/fingerprint_recognition_sys_unlock"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/fingerprint_recognition_unlock_screen"/>

    <Button
            android:id="@+id/fingerprint_recognition_sys_setting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/fingerprint_sys_setting_page"/>
</LinearLayout>
