<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="@dimen/nav_header_height"
        android:background="@drawable/side_nav_bar"
        android:gravity="bottom"
        android:orientation="vertical"
        android:paddingBottom="@dimen/textSize_small"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"
        >

    <android.support.v7.widget.AppCompatImageView
            android:id="@+id/nev_header_imageView"
            android:layout_width="wrap_content"
            android:layout_height="72dp"
            android:layout_marginTop="@dimen/dp_15"
            android:layout_gravity="center"
            android:src="@mipmap/wechat_image"/>

    <TextView
            android:id="@+id/nev_header_tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/dp_6"
            android:text="@string/nav_title"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/dp_4"
            android:text="@string/nav_context"
            android:id="@+id/textView"/>

    <TextView
            android:id="@+id/nev_header_tv_login"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:gravity="center"
            android:textSize="@dimen/sp_14"
            android:text="@string/login"/>
</LinearLayout>
