<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clickable="true"
                android:padding="20dp"
                android:focusable="true">

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="80dp"
                android:background="@drawable/shape_dottedline_update_bg"
                android:orientation="vertical"
                android:paddingBottom="20dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp">

            <TextView
                    android:id="@+id/tv_version"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:layout_marginTop="80dp"
                    android:layout_gravity="center"
                    android:text="@string/version_update"
                    android:textColor="@color/black"
                    android:textSize="18sp"/>

            <TextView
                    android:id="@+id/tv_version_update_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/myTxtSuperLight"/>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                <Button
                        android:id="@+id/bt_cancel"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_weight="1"
                        android:background="@drawable/selector_button_gray"
                        android:layout_marginBottom="10dp"
                        android:layout_marginTop="20dp"
                        android:text="@string/next_update"
                        android:textColor="@color/white"/>

                <Button
                        android:id="@+id/bt_sure"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_weight="1"
                        android:background="@drawable/selector_button_green"
                        android:layout_marginBottom="10dp"
                        android:layout_marginTop="20dp"
                        android:text="@string/update_now"
                        android:textColor="@color/white"/>
            </LinearLayout>
        </LinearLayout>

        <ImageView
                android:id="@+id/img"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@mipmap/icon_bg_rocket"
                android:contentDescription="TODO"/>
    </RelativeLayout>
</RelativeLayout>